--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debmirror (1:2.12) UNRELEASED; urgency=low
+debmirror (1:2.12) unstable; urgency=low
 
   * Always mirror the English "translations" necessary to have any
     package long descriptions at all, even if --i18n is not enabled.
@@ -6,7 +6,7 @@ debmirror (1:2.12) UNRELEASED; urgency=low
   * Make i18n/Index parsing not fail if there are non-SHA1 checksums.
     Although currently only SHA1 is supported here. Closes: #644609
 
- -- Joey Hess <joeyh@debian.org>  Thu, 12 Apr 2012 21:55:34 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri, 13 Apr 2012 12:19:34 -0400
 
 debmirror (1:2.11) unstable; urgency=low
 
