Add --keyring option. Thanks, Tom Jones.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 debmirror (1:2.15) UNRELEASED; urgency=low
 
   * Improved interface to gpgv. Thanks, Tom Jones.
+  * Add --keyring option. Thanks, Tom Jones.
 
  -- Joey Hess <joeyh@debian.org>  Fri, 12 Oct 2012 13:49:51 -0400
 
