--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ debmirror (1:2.15) UNRELEASED; urgency=low
   * Add --keyring option. Thanks, Tom Jones.
   * Add --exclude-field and --include-field options.
     Closes: #695767. Thanks, Colin Watson
+  * Supports https. Closes: #697687 Thanks, Fernando Ike
 
  -- Joey Hess <joeyh@debian.org>  Fri, 12 Oct 2012 13:49:51 -0400
 
