Treat "Origin: Canonical" like "Origin: Ubuntu" Closes: #702319. Thanks, Tal Danzig

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ debmirror (1:2.15) UNRELEASED; urgency=low
   * Add --exclude-field and --include-field options.
     Closes: #695767. Thanks, Colin Watson
   * Supports https. Closes: #697687 Thanks, Fernando Ike
+  * Treat "Origin: Canonical" like "Origin: Ubuntu"
+    Closes: #702319. Thanks, Tal Danzig
 
  -- Joey Hess <joeyh@debian.org>  Fri, 12 Oct 2012 13:49:51 -0400
 
