Support new Contents file location used for wheezy, while still handling the old location. Closes: #637442 Thanks, Christoph Pleger

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,9 @@ debmirror (1:2.16) UNRELEASED; urgency=low
 
   * Fix confusing output with --precleanup.
     Closes: #708355
+  * Support new Contents file location used for wheezy, while still
+    handling the old location.
+    Closes: #637442 Thanks, Christoph Pleger
 
  -- Joey Hess <joeyh@debian.org>  Wed, 15 May 2013 13:28:42 -0400
 
