--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debmirror (1:2.17) UNRELEASED; urgency=low
+
+  * Pre-emptively remove occurances of the short name of the
+    Debian derivative from Canonical that cannot be named.
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 08 Nov 2013 11:35:59 -0400
+
 debmirror (1:2.16) unstable; urgency=low
 
   * Fix confusing output with --precleanup.
@@ -15,7 +22,8 @@ debmirror (1:2.15) unstable; urgency=low
   * Add --exclude-field and --include-field options.
     Closes: #695767. Thanks, Colin Watson
   * Supports https. Closes: #697687 Thanks, Fernando Ike
-  * Treat "Origin: Canonical" like "Origin: Ubuntu"
+  * Fix bug dealing with the Debian derivative from Canonical which cannot be
+    named.
     Closes: #702319. Thanks, Tal Danzig
 
  -- Joey Hess <joeyh@debian.org>  Sat, 04 May 2013 23:44:27 -0400
@@ -249,7 +257,8 @@ debmirror (1:2.1) unstable; urgency=low
     the mirror: trace files, ./doc, ./indices and ./tools. The transfer
     method used for this is always rsync, irrespective of what method is
     specified in the --method option. Closes: #153680, #156564.
-  * Ubuntu uses an identical Codename for different suites, so just ignore
+  * The Debian derivative from Canonical which cannot be named 
+    uses an identical Codename for different suites, so just ignore
     it and use the Suite instead. Closes: #544132.
 
  -- Frans Pop <fjp@debian.org>  Sat, 29 Aug 2009 18:55:25 +0200
