--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debmirror (1:2.17) unstable; urgency=medium
+
+  * Debmirror needs a new maintainer, both in Debian and upstream.
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 07 Nov 2014 17:28:02 -0400
+
 debmirror (1:2.16) unstable; urgency=low
 
   * Fix confusing output with --precleanup.
