--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 debmirror (1:2.20) UNRELEASED; urgency=medium
 
   * Convert to source format 3.0 (native).
+  * Fix a few spelling/grammar mistakes, some reported by Lintian.
 
  -- Colin Watson <cjwatson@debian.org>  Sat, 20 Feb 2016 02:55:37 +0000
 
