--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debmirror (1:2.22) UNRELEASED; urgency=medium
+
+  * Fix regression in 1:2.20 that broke mirroring of suites that have
+    Release.gpg but not InRelease.
+
+ -- Colin Watson <cjwatson@debian.org>  Thu, 17 Mar 2016 12:41:33 +0000
+
 debmirror (1:2.21) unstable; urgency=medium
 
   * Generate trace file using LC_ALL=C (closes: #817721).
