--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-debmirror (1:2.22) UNRELEASED; urgency=medium
+debmirror (1:2.22) unstable; urgency=medium
 
   * Fix regression in 1:2.20 that broke mirroring of suites that have
     Release.gpg but not InRelease.
 
- -- Colin Watson <cjwatson@debian.org>  Thu, 17 Mar 2016 12:41:33 +0000
+ -- Colin Watson <cjwatson@debian.org>  Thu, 17 Mar 2016 13:20:36 +0000
 
 debmirror (1:2.21) unstable; urgency=medium
 
