--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-debmirror (1:2.24) UNRELEASED; urgency=medium
+debmirror (1:2.24) unstable; urgency=medium
 
   * Fix embarrassing syntax error introduced in 1:2.23 (LP: #1562827).
     Never upload in a rush ...
   * Add basic syntax check at build time to prevent this kind of foolish
     mistake in future.
 
- -- Colin Watson <cjwatson@debian.org>  Tue, 29 Mar 2016 10:43:12 +0100
+ -- Colin Watson <cjwatson@debian.org>  Tue, 29 Mar 2016 10:44:31 +0100
 
 debmirror (1:2.23) unstable; urgency=medium
 
