--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debmirror (1:2.25) UNRELEASED; urgency=medium
+
+  * Add enough build-dependencies to be able to run the syntax check
+    (closes: #819489).
+
+ -- Colin Watson <cjwatson@debian.org>  Tue, 29 Mar 2016 12:53:14 +0100
+
 debmirror (1:2.24) unstable; urgency=medium
 
   * Fix embarrassing syntax error introduced in 1:2.23 (LP: #1562827).
