--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debmirror (1:2.26) UNRELEASED; urgency=medium
+
+  [ William Grant ]
+  * Download Translation-*.gz/xz in addition to Translation-*.bz2. Launchpad
+    replaces bz2 with xz from xenial. (LP: #1565585)
+
+ -- Colin Watson <cjwatson@debian.org>  Tue, 05 Apr 2016 11:42:50 +0100
+
 debmirror (1:2.25) unstable; urgency=medium
 
   * Add enough build-dependencies to be able to run the syntax check
