--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,9 @@ debmirror (1:2.26) UNRELEASED; urgency=medium
   * Download Translation-*.gz/xz in addition to Translation-*.bz2. Launchpad
     replaces bz2 with xz from xenial. (LP: #1565585)
 
+  [ Colin Watson ]
+  * Policy version 3.9.8; no changes required.
+
  -- Colin Watson <cjwatson@debian.org>  Tue, 05 Apr 2016 11:42:50 +0100
 
 debmirror (1:2.25) unstable; urgency=medium
