--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debmirror (1:2.28) UNRELEASED; urgency=medium
+
+  * Change priority to optional, since "Priority: extra" is now deprecated.
+
+ -- Colin Watson <cjwatson@debian.org>  Sun, 19 Nov 2017 10:11:27 +0000
+
 debmirror (1:2.27) unstable; urgency=medium
 
   * Fix typo in "Verifying checksums" message (closes: #856163).
