--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,10 @@ debmirror (1:2.28) UNRELEASED; urgency=medium
   * Change priority to optional, since "Priority: extra" is now deprecated.
   * Move VCS to salsa.debian.org.
   * Fix use of uninitialised value $buf in name_release.
+  * Depend on xz-utils (LP: #1614779); xz is needed for all suites that
+    publish .xz but not uncompressed index files, or .gz but not .xz without
+    --slow-cpu, so I think that's common enough to rise above the level of a
+    Recommends.
 
  -- Colin Watson <cjwatson@debian.org>  Sun, 19 Nov 2017 10:11:27 +0000
 
