--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debmirror (1:2.28) UNRELEASED; urgency=medium
+debmirror (1:2.28) unstable; urgency=medium
 
   * Change priority to optional, since "Priority: extra" is now deprecated.
   * Move VCS to salsa.debian.org.
@@ -11,7 +11,7 @@ debmirror (1:2.28) UNRELEASED; urgency=medium
     $file_lists{foo}".  The latter can return false positives due to
     autovivification (closes: #868675).
 
- -- Colin Watson <cjwatson@debian.org>  Sun, 19 Nov 2017 10:11:27 +0000
+ -- Colin Watson <cjwatson@debian.org>  Tue, 23 Jan 2018 13:32:49 +0000
 
 debmirror (1:2.27) unstable; urgency=medium
 
