--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debmirror (1:2.29) UNRELEASED; urgency=medium
+
+  * Add version string and --version option.
+
+ -- Stefan Kisdaroczi <skisda@gmail.com>  Sun, 11 Feb 2018 21:23:30 +0000
+
 debmirror (1:2.28) unstable; urgency=medium
 
   * Change priority to optional, since "Priority: extra" is now deprecated.
