Add additional trace info
Some adjustments by Colin Watson on top of the original patch:

 * added "source" to the Architectures list if $do_source is true
 * added a Creator field
 * renamed Distributions to Suites
 * used a here-document to make the bulk of the trace printing feel less
   verbose

Closes: #863194

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ debmirror (1:2.29) UNRELEASED; urgency=medium
 
   [ Stefan Kisdaroczi ]
   * Add version string and --version option.
+  * Add additional trace info (closes: #863194).
 
   [ Colin Watson ]
   * Automatically update $version at binary package build time.
