Make the error message when mkdir fails more helpful.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debmirror (1:2.30) UNRELEASED; urgency=medium
+
+  * Make the error message when mkdir fails more helpful.
+
+ -- Colin Watson <cjwatson@debian.org>  Tue, 27 Feb 2018 17:07:56 +0000
+
 debmirror (1:2.29) unstable; urgency=medium
 
   [ Stefan Kisdaroczi ]
