Restart partial HTTP downloads
Closes: #629922

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 debmirror (1:2.30) UNRELEASED; urgency=medium
 
   * Make the error message when mkdir fails more helpful.
+  * Restart partial HTTP downloads (closes: #629922).
 
  -- Colin Watson <cjwatson@debian.org>  Tue, 27 Feb 2018 17:07:56 +0000
 
