--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ debmirror (1:2.31) UNRELEASED; urgency=medium
 
   [ Colin Watson ]
   * Fetch Packages-all and Contents-all if they exist (closes: #904927).
+  * Fix mirroring of suites that have InRelease but not Release.gpg.
 
  -- Ondřej Nový <onovy@debian.org>  Mon, 01 Oct 2018 10:31:31 +0200
 
