--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,9 @@ debmirror (1:2.31) UNRELEASED; urgency=medium
   [ Colin Watson ]
   * Fetch Packages-all and Contents-all if they exist (closes: #904927).
   * Fix mirroring of suites that have InRelease but not Release.gpg.
+  * Improve GPG verification: accept a signature file as long as there's at
+    least one good signature from a trusted key, and borrow code from APT to
+    explicitly verify the structure of InRelease files (closes: #918304).
 
  -- Ondřej Nový <onovy@debian.org>  Mon, 01 Oct 2018 10:31:31 +0200
 
