--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debmirror (1:2.34) UNRELEASED; urgency=medium
+
+  * Bump debhelper from old 9 to 12.
+
+ -- Debian Janitor <janitor@jelmer.uk>  Thu, 12 Dec 2019 14:10:07 +0000
+
 debmirror (1:2.33) unstable; urgency=medium
 
   * Use debhelper-compat instead of debian/compat.
