--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,11 @@
 debmirror (1:2.34) UNRELEASED; urgency=medium
 
+  [ Debian Janitor ]
   * Bump debhelper from old 9 to 12.
   * Fix day-of-week for changelog entry 20040926.
+
+  [ Colin Watson ]
+  * Avoid two-argument open.
 
  -- Debian Janitor <janitor@jelmer.uk>  Thu, 12 Dec 2019 14:10:07 +0000
 
