--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debmirror (1:2.35) UNRELEASED; urgency=medium
+
+  [ Kees Cook ]
+  * Remove temporary files created while verifying InRelease (closes:
+    #961197).
+
+ -- Colin Watson <cjwatson@debian.org>  Thu, 03 Jun 2021 11:20:26 +0100
+
 debmirror (1:2.34) unstable; urgency=medium
 
   [ Debian Janitor ]
