--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-debmirror (1:2.35) UNRELEASED; urgency=medium
+debmirror (1:2.35) unstable; urgency=medium
 
   [ Kees Cook ]
   * Remove temporary files created while verifying InRelease (closes:
     #961197).
 
- -- Colin Watson <cjwatson@debian.org>  Thu, 03 Jun 2021 11:20:26 +0100
+ -- Colin Watson <cjwatson@debian.org>  Thu, 03 Jun 2021 11:23:33 +0100
 
 debmirror (1:2.34) unstable; urgency=medium
 
