--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debmirror (1:2.36) UNRELEASED; urgency=medium
+
+  [ Sascha Lucas ]
+  * Enable Ubuntu ESM mirroring.
+
+ -- Colin Watson <cjwatson@debian.org>  Fri, 18 Jun 2021 14:55:54 +0100
+
 debmirror (1:2.35) unstable; urgency=medium
 
   [ Kees Cook ]
